Improved styles and layout in the header section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <header class="splash">
+        <header>
             <nav class="navigation">
                 <div class="container">
                     <div class="logo">
@@ -27,6 +27,13 @@
                     </div>
                 </div>
             </nav>
+            <div class="splash">
+                <div class="splash-inner">
+                    <h1 class="page-title">Nadar Vlkan</h1>
+                    <h2 class="page-subtitle">...i jego projekt landing-page pod GITa</h2>
+                    <a href="#" class="btn btn-one">Własna treść "batona"</a>
+                </div>
+            </div>
         </header>
     </body>
 </html>
