Add portfolio section + styles

--- a/index.html
+++ b/index.html
@@ -61,5 +61,69 @@
                 </div>
             </div>
         </section>
+        <section class="our-portfolio">
+            <div class="container">
+                <h1>OUR PORTFOLIO</h1>
+                <h2>Proin iaculis purus consequat sem cure.</h2>
+                <div class="container-wrapper">
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row1-1.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row1-2.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row1-3.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="container-wrapper">
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row2-1.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row2-2.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                    <div class="container-wrapper-column">
+                        <div class="image">
+                            <img src="images/row2-3.png">
+                        </div>
+                        <div class="img-description">
+                            <h3>Ebony & Ivory</h3>
+                            <p>Branding</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
