--- a/index.html
+++ b/index.html
@@ -125,5 +125,22 @@
                 </div>
             </div>
         </section>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-inner">
+                    <div class="copyright">
+                        <p>© Copyright 2022 FreebiesXpress.com</p>
+                    </div>
+                    <div class="social">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
+                            <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
+                            <li><a href="#"><i class="fa-brands fa-pinterest-p"></i>Pinterest</a></li>
+                            <li><i class="fa-brands fa-google-plus-g"></i>Google +</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
