Add link to G+ in footer

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <li><a href="#"><i class="fa-brands fa-twitter"></i>Twitter</a></li>
                             <li><a href="#"><i class="fab fa-facebook-f"></i>Facebook</a></li>
                             <li><a href="#"><i class="fa-brands fa-pinterest-p"></i>Pinterest</a></li>
-                            <li><i class="fa-brands fa-google-plus-g"></i>Google +</a></li>
+                            <li><a href="#"><i class="fa-brands fa-google-plus-g"></i>Google +</a></li>
                         </ul>
                     </div>
                 </div>
