--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <nav class="navigation">
                     <div class="container">
                         <div class="logo">
-                            <a href="#"><img src="images/logo.png"></a>
+                            <a href="#"><img src="images/logo.png" alt="Logo"></a>
                         </div>
                         <div class="menu">
                             <ul>
@@ -68,28 +68,28 @@
                 <div class="container-wrapper">
                     <div class="container-wrapper-column">
                         <div class="image">
-                            <img src="images/row1-1.png">
+                            <img src="images/row1-1.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
                     <div class="container-wrapper-column">
                         <div class="image">
-                            <img src="images/row1-2.png">
+                            <img src="images/row1-2.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
-                    <div class="container-wrapper-column">
+                    <div class="container-wrapper-column" alt="">
                         <div class="image">
-                            <img src="images/row1-3.png">
+                            <img src="images/row1-3.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
@@ -97,28 +97,28 @@
                 <div class="container-wrapper">
                     <div class="container-wrapper-column">
                         <div class="image">
-                            <img src="images/row2-1.png">
+                            <img src="images/row2-1.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
                     <div class="container-wrapper-column">
                         <div class="image">
-                            <img src="images/row2-2.png">
+                            <img src="images/row2-2.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
                     <div class="container-wrapper-column">
                         <div class="image">
-                            <img src="images/row2-3.png">
+                            <img src="images/row2-3.png" alt="">
                         </div>
                         <div class="img-description">
-                            <h3>Ebony & Ivory</h3>
+                            <h3>Ebony &amp; Ivory</h3>
                             <p>Branding</p>
                         </div>
                     </div>
